
------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Added: Caller info for __DIE__ and __WARN__ signal handlers
	Added: Debug info for loading of listener file (Event::Manager)
	Fixed: Many inconsistencies in iMSCP::Getopt

DATABASE
	Added: SPF type to the list of allowed DNS resource records
	Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
	Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
	Added: SPF DNS resource record type (validated as a TXT record)
	Changed: The `type` field cannot longer be changed when editing a DNS resource record
	Fixed: Cannot add DKIM/DMARC DNS resource record
	Fixed: Customer must be allowed to specify custom TTL value for any DNS resource record
	Fixed: Customer must be allowed to specify `name` field of any DNS resource record
	Fixed: IDNs are shown in ASCII in SSL certificate management interface
	Fixed: iMSCP_Update_Database::addIndex() doesn't allow to specify index length

INSTALLER
	Added: Conditional statement feature for install.xml files (copy_config items only)
	Fixed: Debug and verbose modes must be set early
	Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
	Fixed: Plugin setup listeners are no longer registered (regression fix)

PLUGINS
	Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
	Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
	Fixed: Wrong events triggered when a plugin is being locked/unlocked
	Updated: API version to 1.0.4

SERVERS
	Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)