@@ -7,6 +7,7 @@ Git 1.2.x
 BACKEND
 	Added: Caller info for __DIE__ and __WARN__ signal handlers
 	Added: Debug info for loading of listener file (Event::Manager)
+	Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached
 	Fixed: Many inconsistencies in iMSCP::Getopt
 
 DATABASE
